feature: Добавил получение всех типов услуг клиники
